# ai_calendar_planner

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py
src/langgraph_service/: graph.py  llm_config.py  models.py  tools.py
src/services/: calendar_management.py
src/telegram_bot/: bot.py
